# BKHN_SMART-CAR

./: CMakeLists.txt  ESP32_BT_BV_CAR_ino__1_.ino  main.cpp  main.py  mainwindow.cpp  mainwindow.h
ARDUINO/: ESP32_BT_BV_CAR_ino__1_.ino
VSCODE/: CMakeLists.txt  main.cpp  main.py  mainwindow.cpp  mainwindow.h
